--- a/signUp.html
+++ b/signUp.html
@@ -67,13 +67,13 @@
 
     
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="public/css/style.css" rel="stylesheet">
   </head>
   <body class="text-center">
     
 <main class="form-signin w-100 m-auto">
   <form action="/" method="post">
-    <img class="mb-4" src="images/logo.png" alt="" width="112" height="107">
+    <img class="mb-4" src="publc/images/logo.png" alt="" width="112" height="107">
     <h1 class="h3 mb-3 fw-normal">Signup for Newsletter</h1>
 
     <div class="form">
