--- a/signUp.html
+++ b/signUp.html
@@ -73,7 +73,7 @@
     
 <main class="form-signin w-100 m-auto">
   <form action="/" method="post">
-    <img class="mb-4" src="publc/images/logo.png" alt="" width="112" height="107">
+    <img class="mb-4" src="https://cdn-icons-png.flaticon.com/512/3358/3358013.png" alt="" width="112" height="107">
     <h1 class="h3 mb-3 fw-normal">Signup for Newsletter</h1>
 
     <div class="form">
